# externref

./: Cargo.toml  readme.md
crates/externref/: Cargo.toml
crates/externref/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: args.rs  func.rs  lib.rs
crates/transformer/: Cargo.toml
src/: lib.rs
