[package]
name = "externref-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.57"
proc-macro2 = "1.0.39"
quote = "1.0.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
syn = { version = "1.0.96", features = ["parsing", "proc-macro", "full"] }
